[gd_scene load_steps=10 format=2]

[ext_resource path="res://godot shapes/triangle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Triangle.gd" type="Script" id=2]
[ext_resource path="res://faces/happy.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://SFX/shoot.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 34.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 34.0

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 1, 0.584314, 0, 1 )
font_data = ExtResource( 5 )

[node name="Triangle" type="KinematicBody2D"]
script = ExtResource( 2 )
BulletScene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.537255, 0, 1 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -7.20285, -0.332323 )
rotation = -1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 54, 0 )

[node name="SplitTimer" type="Timer" parent="."]
autostart = true

[node name="HitBox" type="Area2D" parent="." groups=[
"triangle-1",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -12, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -12, 2 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HP" type="Label" parent="."]
margin_left = -8.0
margin_top = -74.0
margin_right = 10.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 3 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="SplitTimer" to="." method="_on_SplitTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
